@@ -1,5 +1,6 @@
 Version Four (marionline)
 	* Add --list-current-files to view in the standart-output files stored in my archive
+	* Modification on --restore: if I provide a path to --restore option I don't want to answare a confermation question too
 
 Version Four (0.4)
 
